# rpi4-argon-fan-controller

./: Cargo.toml  LICENSE  README.md
src/: config.rs  fan_speed_map.rs  lib.rs  mailbox.rs  main.rs  scheduler.rs
