[package]
name = "rpi4-argon-fan-controller"
version = "0.1.0"
authors = ["Jon Lamb"]
edition = "2018"

[[bin]]
name = "argon-fan-ctl"
path = "src/main.rs"

[dependencies]
env_logger = "0.8"
log = "0.4"
chrono = "0.4"
toml = "0.5"
structopt = "0.3"
rppal = "0.11"

[dependencies.serde]
version = "1.0"
features=["derive"]

[dependencies."rpi-mailbox"]
git = "https://github.com/jonlamb-gh/rpi-mailbox.git"
branch = "aarch64"
